新添文章-跨域请求解决方案

--- a/_posts/java/2016-05-14-java流、序列化和相关类的用法.md
+++ b/_posts/java/2016-05-14-java流、序列化和相关类的用法.md
@@ -11,6 +11,10 @@ categories: java
 
 本文主要介绍了阻塞流、非阻塞流、序列化和流工具的使用场景，但不介绍流的实现方式。
 
+### io流的结构
+
+![io流的层次结构](/blog/images/posts_imgs/201605140101.png)
+
 ### 面向线程的、阻塞式I/O:java io
 
 #### 1.InputStream / Reader
@@ -170,7 +174,7 @@ FileChannel提供了map方法来把文件影射到内存中（这里的内存指
 
 ### Scanner
 
-jdk1.5+专门的扫描数据工具类，也可以读取和校验从输入流、文件、字符串、指定源、指定信道为入口的数据
+jdk1.5+专门的扫描数据工具类，也可以读取和校验从输入流、文件、字符串、指定源、指定信道为入口的数据。nextline()是通过正则表达式获取每行的内容，RandomAccessFile、BufferedReader是比较每个字符是否是换行符才获取每行的内容。
 
 ### 参考资料
 
