--- a/_posts/互联网/2017-09-10-如何阅读代码.md
+++ b/_posts/互联网/2017-09-10-如何阅读代码.md
@@ -17,7 +17,7 @@ isOriginal: false
 
 假设你使用 [Git](https://git-scm.com/) ，但是如果你使用 [SVN](https://subversion.apache.org/) ，那么这个想法也是同样适用的。
 
-使用** git log 查看整个代码仓库的提交历史记录**。此命令将打印提交消息，因此，如果要执行类似搜索提交消息中引用 someFunction 的提交，请勿忘记使用 grep 命令：git log | grep someFunction -C 3（-C 3将显示匹配到的上下文三行内容）。
+使用** git log 查看整个代码仓库的提交历史记录**。此命令将打印提交消息，因此，如果要执行类似搜索提交消息中引用 someFunction 的提交，请勿忘记使用 grep 命令：`` git log | grep someFunction -C 3 ``（-C 3将显示匹配到的上下文三行内容）。
 
 git log 还可以显示具有 -p 标志的单个文件的历史记录：git log -p index.js。 注意最近一直在修改代码的人，这样你就能知道在出现问题时找谁咨询了。
 
