--- a/_posts/java/2017-12-08-table表格实现按行拆分.md
+++ b/_posts/java/2017-12-08-table表格实现按行拆分.md
@@ -10,21 +10,21 @@ isOriginal: true
 * TOC
 {:toc}
 
-### 1.要点：
+### 1.要点
 
 1.不用poi,因为不是操作excel;
 
 2.表格会存在行合并，所有要进行拆分
 
-### 2.思路：
+### 2.思路
 
 由于拆分的逻辑麻烦，所有先在前台把table的格式把<td>汇聚成一个json格式的数据块传到后台中用json工具去拆分
 
-### 3.核心代码：
+### 3.核心代码
 
 前端js做处理把table数据以json格式返回
 
-```javascription
+```javascript
 //获取table的数据，以Json的格式返回
 function getJsonCopyData($iframe,hasHeader){
 	//---------------1.获取table的内容
